List is compiling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="./style.css" media="screen">
   </head>
   <body>
+  	<section class="inputs">
+		<div class="leftSide">
+			<h2>Add List Items in Box</h2>
+			<input type='text' id="listerInput" placeholder="Add New Items - '1. ...'"></input>
+			<div>
+			<button id="add">Store Item</button>
+			</div>
+		</div>
+	</section>
+	<section type='text'>
+		<h3 class="title">To Do Today</h3>
+		<div class="listBox" id='container'>
+			
+		</div>
+		<button id='clear' type="submit">Clear List</button>
+	</section>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
