--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="listBox" id='container'>
 			
 		</div>
-		<button id='clear' type="submit">Clear List</button>
+<!-- 		<button id='clear' type="submit">Clear List</button> -->
 	</section>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
