--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Webpack!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css" media="screen">
   </head>
   <body>
@@ -17,9 +18,9 @@
 	</section>
 	<section type='text'>
 		<h3 class="title">To Do Today</h3>
-		<div class="listBox" id='container'>
+		<ol class="listBox" id='container'>
 			
-		</div>
+		</ol>
 <!-- 		<button id='clear' type="submit">Clear List</button> -->
 	</section>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
