Model/Collection Commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<section class="inputs">
 		<div class="leftSide">
 			<h2>Add List Items in Box</h2>
-			<input type='text' id="listerInput" placeholder="Add New Items - '1. ...'"></input>
+			<input type='text' id="listerInput" placeholder="Add New Item"></input>
 			<div>
 			<button id="add">Store Item</button>
 			</div>
